security.tf
resource "aws_security_group" "sg" {
    name = "Terraform-sg"
    description = "Allow TLS inbound traffic and all outbound traffic"
    vpc_id = aws_vpc.vp.id
    
    ingress {
        protocol = "tcp"
        from_port = "22"
        to_port = "22"
        cidr_blocks = ["0.0.0.0/0"]
    }
     ingress {
        protocol = "tcp"
        from_port = "80"
        to_port = "80"
        cidr_blocks = ["0.0.0.0/0"]
    }
     ingress {
        protocol = "tcp"
        from_port = "9000"
        to_port = "9000"
        cidr_blocks = ["0.0.0.0/0"]
    }
     ingress {
        protocol = "-1"
        from_port = "0"
        to_port = "0"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        protocol = "-1"
        from_port = "0"
        to_port = "0"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
